# imguivge

./: .gitignore  CMakeLists.txt  ivge_bu0836x.h  ivge_image.h  readme.md
lib/hidapi/windows/hidapi_x64/: hidapi.lib
lib/hidapi/windows/hidapi_x86/: hidapi.lib
softael_lib/: __pthread__.h  bz.h  ga.h  imgui_w.h  sda.h  sic.h  sleep.h  softael.h  task.h  vl.h  vl3d.h
softael_lib/deprecated/: base64.h  calib.h  checksum.h  etc.h  interp.h  nmea.h  sch.h  svmp.h  test.h
src/: gui.h  gui_menu.h  gui_tbar.h  gui_vge.h  gui_vl3d.h  gui_w.h  vge.h
src/mac/: metal.mm
src/mac/imgui_vge/: Info-macOS.plist  MainMenu.storyboard  imgui_vge.entitlements
src/mac/imgui_vge.xcodeproj/: project.pbxproj
src/mac/imgui_vge.xcodeproj/project.xcworkspace/xcuserdata/cel.xcuserdatad/: UserInterfaceState.xcuserstate
src/mac/imgui_vge.xcodeproj/project.xcworkspace/xcuserdata/johnbrown.xcuserdatad/: UserInterfaceState.xcuserstate
src/mac/imgui_vge.xcodeproj/xcshareddata/xcschemes/: imgui_vge.xcscheme
src/mac/imgui_vge.xcodeproj/xcuserdata/cel.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
src/mac/imgui_vge.xcodeproj/xcuserdata/cel.xcuserdatad/xcschemes/: xcschememanagement.plist
src/mac/imgui_vge.xcodeproj/xcuserdata/johnbrown.xcuserdatad/xcschemes/: xcschememanagement.plist
src/win/: imgui_vge.cpp  opengl.cpp
